# Careers

./: README.md  cvbrowse.py  extract.py  fastcrunch.py  processpages.py  wikipediacrunch.py  yahoocvscrape.py
apps/wikiprocess/: iseExceptions.hpp  main.cpp  sqldb.cpp  sqldb.hpp
community/: all_in_one.cpp
data/: Wikipedia-small-snapshot.xml.bz2
haskell/: test.hs  wikimunge.cabal  wikixmlparse.cabal  wikixmlparse.hs
haskell/src/Text/: WikimediaParser.hs
haskell/src/WikiMunge/: Utils.hs
haskell/src/apps/: wikimungetest.hs
haskell/src/test/: unittests.hs
old/apps/wikiprocess/: iseExceptions.hpp
old/data/: Wikipedia-small-snapshot.xml.bz2
old/haskell/src/WikiMunge/: Parser.hs
old/haskell/src/apps/: wikixmlparse.hs
play/optimal/: runsite.sh
play/optimal/app/: Authenticated.scala  Batch.scala  Models.scala  PublicSite.scala  controllers.scala
play/optimal/app/views/: main.scala.html
play/optimal/conf/: application.conf  dependencies.yml  messages  routes
play/optimal/db/evolutions/: 1.sql  10.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql
play/optimal/modules/: scala-0.9.1
play/optimal/public/javascripts/: script.js
play/optimal/public/stylesheets/: main.css  style.css
play/optimal/test/: Application.test.html
python/: extract.py  wikipediacrunch.py
scala/: cvbatch.sh  munge.py  public  runwiki.sh  scala.sh  wikibatch.sh  wikibatchsmall.sh
scala/community/: all_in_one.cpp  community  convert  hierarchy
scala/project/: build.properties
scala/project/plugins/: Plugins.scala
scala/src/main/scala/: BuildPhraseQueryDb.scala  Crunch.scala  (+16 more)
(+66 files in other folders)
