Name:               wikimunge
Version:            0.0
Description:        Haskell mediawiki parser
License:            GPL
Author:             Alex Wilson
Maintainer:         alex_wilson@pobox.com
Build-Type:         Simple
Cabal-Version:      >=1.2


Executable wikixmlparse
  hs-source-dirs:   src
  Main-is:          apps/wikixmlparse.hs
  Build-Depends:    base > 3 && < 5
  Build-Depends:    hexpat
  Build-Depends:    dlist
  Build-Depends:    bzlib
  Build-Depends:    bytestring
  Build-Depends:    binary
  Build-Depends:    cmdargs
  
  
Executable wikimungetest
  hs-source-dirs:   src
  Main-is:          apps/wikimungetest.hs
  Build-Depends:    base > 3 && < 5
  Build-Depends:    bzlib
  Build-Depends:    bytestring
  Build-Depends:    binary
  Build-Depends:    cmdargs
  Build-Depends:    parsec

test-suite unittests
  hs-source-dirs:   src
  type:             exitcode-stdio-1.0
  Main-is:          test/unittests.hs
  Build-Depends:    base > 3 && < 5
  Build-Depends:    HUnit
  Build-Depends:    binary
  
